--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babylonjs/core": "^6.21.1",
+    "@babylonjs/gui": "^6.21.1",
+    "@babylonjs/inspector": "^6.21.1",
     "core-js": "^3.8.3",
     "path": "^0.12.7",
     "vue": "^3.2.13",
