--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babylonjs/core": "^6.21.1",
     "@babylonjs/gui": "^6.21.1",
     "@babylonjs/inspector": "^6.21.1",
+    "@babylonjs/loaders": "^6.21.2",
     "core-js": "^3.8.3",
     "path": "^0.12.7",
     "vue": "^3.2.13",
