231004 수정사항 (카메라 수정, 코딩 양식 수정)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-, "src/scenes/mainScene.ts"  ],
+, "src/scripts/mainScene.ts"  ],
   "exclude": [
     "node_modules"
   ]
